fix misalignment and asymmetry on mobile

--- a/website/.vitepress/theme/style.css
+++ b/website/.vitepress/theme/style.css
@@ -61,6 +61,10 @@
         .wrapper {
             padding: 0 !important;
         }
+
+        .VPNavBarHamburger {
+            margin-right: 8px;
+        }
     }
 }
 
